Fixed application.db and application.model classes.