@@ -1,4 +1,4 @@
-package org.joelson.mattias.turfgame.application.db;
+package org.joelson.turf.application.db;
 
 import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
@@ -11,10 +11,11 @@ import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
 import jakarta.persistence.UniqueConstraint;
 import jakarta.validation.constraints.NotNull;
-import org.joelson.mattias.turfgame.application.model.MunicipalityData;
-import org.joelson.mattias.turfgame.application.model.ZoneData;
-import org.joelson.mattias.turfgame.util.StringUtil;
+import org.joelson.turf.application.model.MunicipalityData;
+import org.joelson.turf.application.model.ZoneData;
+import org.joelson.turf.util.StringUtil;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
@@ -22,10 +23,10 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Entity
-@Table(name = "municipalities", //NON-NLS
-        uniqueConstraints = @UniqueConstraint(columnNames = { "region_id", "name" })) //NON-NLS
+@Table(name = "municipalities", uniqueConstraints = @UniqueConstraint(columnNames = { "region_id", "name" }))
 public class MunicipalityEntity implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     @Id
@@ -40,12 +41,20 @@ public class MunicipalityEntity implements Serializable {
     @Column(nullable = false)
     private String name;
 
-    @OneToMany(cascade= CascadeType.ALL)
-    @JoinColumn(name = "municipality_id") //NON-NLS
+    @OneToMany(cascade = CascadeType.ALL)
+    @JoinColumn(name = "municipality_id")
     private ArrayList<MunicipalityZoneEntity> municipalityZones;
 
 
     public MunicipalityEntity() {
+    }
+
+    public static MunicipalityEntity build(RegionEntity region, String name) {
+        MunicipalityEntity municipality = new MunicipalityEntity();
+        municipality.setRegion(region);
+        municipality.setName(name);
+        municipality.municipalityZones = new ArrayList<>();
+        return municipality;
     }
 
     public int getId() {
@@ -57,7 +66,7 @@ public class MunicipalityEntity implements Serializable {
     }
 
     public void setRegion(RegionEntity region) {
-        this.region = Objects.requireNonNull(region, "Region can not be null"); //NON-NLS
+        this.region = Objects.requireNonNull(region, "Region can not be null");
     }
 
     public String getName() {
@@ -65,7 +74,7 @@ public class MunicipalityEntity implements Serializable {
     }
 
     public void setName(String name) {
-        this.name = StringUtil.requireNotNullAndNotEmpty(name, "Name can not be null", "Name can not be empty"); //NON-NLS
+        this.name = StringUtil.requireNotNullAndNotEmpty(name, "Name can not be null", "Name can not be empty");
     }
 
     public List<MunicipalityZoneEntity> getMunicipalityZones() {
@@ -77,8 +86,7 @@ public class MunicipalityEntity implements Serializable {
         if (this == obj) {
             return true;
         }
-        if (obj instanceof MunicipalityEntity) {
-            MunicipalityEntity that = (MunicipalityEntity) obj;
+        if (obj instanceof MunicipalityEntity that) {
             return region.equals(that.region) && name.equals(that.name);
         }
         return false;
@@ -91,23 +99,13 @@ public class MunicipalityEntity implements Serializable {
 
     @Override
     public String toString() {
-        return String.format("MunicipalityEntity[region %s, name %s, municipalityZones %s]", //NON-NLS
+        return String.format("MunicipalityEntity[region %s, name %s, municipalityZones %s]",
                 EntityUtil.toStringPart(region), name, municipalityZones);
     }
 
     public MunicipalityData toData() {
-        List<ZoneData> zones = municipalityZones.stream()
-                .map(MunicipalityZoneEntity::getZone)
-                .map(ZoneEntity::toData)
-                .collect(Collectors.toList());
+        List<ZoneData> zones = municipalityZones.stream().map(MunicipalityZoneEntity::getZone).map(ZoneEntity::toData)
+                .toList();
         return new MunicipalityData(region.toData(), name, zones);
-    }
-
-    public static MunicipalityEntity build(RegionEntity region, String name) {
-        MunicipalityEntity municipality = new MunicipalityEntity();
-        municipality.setRegion(region);
-        municipality.setName(name);
-        municipality.municipalityZones = new ArrayList<>();
-        return municipality;
     }
 }
